[gd_scene load_steps=5 format=3 uid="uid://q83124j4wqwn"]

[ext_resource type="Script" path="res://Scripts/battle_menu_gui.gd" id="1_0fmcj"]
[ext_resource type="Texture2D" uid="uid://c665plx0j6b0w" path="res://sample/Sky.png" id="2_5t5ql"]
[ext_resource type="PackedScene" uid="uid://dqxuxpapmko30" path="res://Scenes/battle_slot.tscn" id="3_nwk3u"]
[ext_resource type="PackedScene" uid="uid://7pbpaipl6xhg" path="res://Scenes/cursor.tscn" id="4_b1enu"]

[node name="Battle_GUI" type="Control"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fmcj")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 11.0
offset_right = 353.0
offset_bottom = 161.0
texture = ExtResource("2_5t5ql")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -66.0
offset_right = 134.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Battle_Slot" parent="NinePatchRect/GridContainer" instance=ExtResource("3_nwk3u")]
layout_mode = 2

[node name="Battle_Slot2" parent="NinePatchRect/GridContainer" instance=ExtResource("3_nwk3u")]
layout_mode = 2

[node name="Battle_Slot3" parent="NinePatchRect/GridContainer" instance=ExtResource("3_nwk3u")]
layout_mode = 2

[node name="Battle_Slot4" parent="NinePatchRect/GridContainer" instance=ExtResource("3_nwk3u")]
layout_mode = 2

[node name="Cursor" parent="." instance=ExtResource("4_b1enu")]
layout_mode = 0
menu_parent_path = NodePath("../NinePatchRect/GridContainer")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="cursor_selected" from="NinePatchRect/GridContainer/Battle_Slot" to="." method="_on_battle_slot_cursor_selected"]
[connection signal="cursor_selected" from="NinePatchRect/GridContainer/Battle_Slot2" to="." method="_on_battle_slot_2_cursor_selected"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
